frame/support/test/tests/pallet_ui/event_wrong_item.stderr
error: Invalid pallet::event, expected enum item
  --> $DIR/event_wrong_item.rs:19:2
   |
19 |     pub struct Foo;
   |     ^^^
